[package]
name = "bt_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
polars = {version = "0.30.0", features = ["lazy", "rolling_window", "object", "rows", "csv"]}
# polars-io = {version = "0.30.0", features = ["lazy", "object", "csv", "json", "fmt"]}
rand = "0.8.5"
rand_chacha = "0.3.1"
